// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. a full article with all content items with dropcap template 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#f0f0f0",
    }
  }
>
  <RCTScrollView>
    <View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        />
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        >
          <Text
            style={
              Object {
                "color": undefined,
                "fontFamily": "TimesModern-Regular",
                "fontSize": 216,
                "left": 10,
                "lineHeight": 204.23812500000003,
                "position": "absolute",
              }
            }
          >
            T
          </Text>
          <View
            style={
              Object {
                "height": 156,
                "marginBottom": 20,
                "paddingLeft": 10,
                "paddingRight": 10,
              }
            }
          >
            <View>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "left": 139,
                    "lineHeight": 52,
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                h
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "left": 158.828125,
                    "lineHeight": 52,
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                is
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "left": 195.0390625,
                    "lineHeight": 52,
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                being
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "left": 292.017578125,
                    "lineHeight": 52,
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                Black
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "left": 388.75,
                    "lineHeight": 52,
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                History
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "left": 512.095703125,
                    "lineHeight": 52,
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                Month,
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "left": 631.486328125,
                    "lineHeight": 52,
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                last
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "left": 139,
                    "lineHeight": 52,
                    "position": "absolute",
                    "top": 52,
                  }
                }
              >
                week
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        >
          <View
            style={
              Object {
                "marginBottom": 20,
                "paddingHorizontal": 10,
              }
            }
          >
            <InteractiveWrapper />
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "height": 0,
          }
        }
      />
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        >
          <ActivityIndicator />
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`2. an article with interactives 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#f0f0f0",
    }
  }
>
  <RCTScrollView>
    <View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        />
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        >
          <View
            style={
              Object {
                "marginBottom": 20,
                "paddingHorizontal": 10,
              }
            }
          >
            <InteractiveWrapper />
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        >
          <View
            style={
              Object {
                "marginBottom": 20,
                "paddingHorizontal": 0,
                "width": "100%",
              }
            }
          >
            <InteractiveWrapper />
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "height": 0,
          }
        }
      />
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        >
          <ActivityIndicator />
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`3. an article with no content 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#f0f0f0",
    }
  }
>
  <RCTScrollView>
    <View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        />
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#ffffff",
                "maxWidth": "100%",
                "overflow": "hidden",
                "width": undefined,
              }
            }
          >
            <ArticleExtras />
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        >
          <ActivityIndicator />
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`4. an article with no content if content is set as null 1`] = `null`;

exports[`5. an article with a nested markup in first paragraph displays a drop cap 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#f0f0f0",
    }
  }
>
  <RCTScrollView>
    <View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        />
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        >
          <Text
            style={
              Object {
                "color": undefined,
                "fontFamily": "TimesModern-Regular",
                "fontSize": 216,
                "left": 10,
                "lineHeight": 241.55085937500002,
                "position": "absolute",
              }
            }
          >
            Q
          </Text>
          <View
            style={
              Object {
                "height": 156,
                "marginBottom": 20,
                "paddingLeft": 10,
                "paddingRight": 10,
              }
            }
          >
            <View>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "fontWeight": "bold",
                    "left": 159,
                    "lineHeight": 52,
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                S
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "fontWeight": "bold",
                    "left": 180.357421875,
                    "lineHeight": 52,
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                ome
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "fontWeight": "bold",
                    "left": 260.42578125,
                    "lineHeight": 52,
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                years
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "fontWeight": "bold",
                    "left": 355.541015625,
                    "lineHeight": 52,
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                ago
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "fontWeight": "bold",
                    "left": 424.763671875,
                    "lineHeight": 52,
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                I
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "fontWeight": "bold",
                    "left": 443.466796875,
                    "lineHeight": 52,
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                made
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "fontWeight": "bold",
                    "left": 542.888671875,
                    "lineHeight": 52,
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                the
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "fontWeight": "bold",
                    "left": 159,
                    "lineHeight": 52,
                    "position": "absolute",
                    "top": 52,
                  }
                }
              >
                decision
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "fontWeight": "bold",
                    "left": 302.560546875,
                    "lineHeight": 52,
                    "position": "absolute",
                    "top": 52,
                  }
                }
              >
                to
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "fontWeight": "bold",
                    "left": 343.412109375,
                    "lineHeight": 52,
                    "position": "absolute",
                    "top": 52,
                  }
                }
              >
                take
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "fontWeight": "bold",
                    "left": 420.6328125,
                    "lineHeight": 52,
                    "position": "absolute",
                    "top": 52,
                  }
                }
              >
                as
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "fontWeight": "bold",
                    "left": 467.689453125,
                    "lineHeight": 52,
                    "position": "absolute",
                    "top": 52,
                  }
                }
              >
                a
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "fontWeight": "bold",
                    "left": 496.18359375,
                    "lineHeight": 52,
                    "position": "absolute",
                    "top": 52,
                  }
                }
              >
                friend
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "fontWeight": "bold",
                    "left": 597.75,
                    "lineHeight": 52,
                    "position": "absolute",
                    "top": 52,
                  }
                }
              >
                a
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "fontWeight": "bold",
                    "left": 159,
                    "lineHeight": 52,
                    "position": "absolute",
                    "top": 104,
                  }
                }
              >
                woman
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "fontWeight": "bold",
                    "left": 286.494140625,
                    "lineHeight": 52,
                    "position": "absolute",
                    "top": 104,
                  }
                }
              >
                who
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "fontWeight": "bold",
                    "left": 362.818359375,
                    "lineHeight": 52,
                    "position": "absolute",
                    "top": 104,
                  }
                }
              >
                is
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "fontWeight": "bold",
                    "left": 399.029296875,
                    "lineHeight": 52,
                    "position": "absolute",
                    "top": 104,
                  }
                }
              >
                very
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "fontWeight": "bold",
                    "left": 473.75390625,
                    "lineHeight": 52,
                    "position": "absolute",
                    "top": 104,
                  }
                }
              >
                opinionated.
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        >
          <View
            style={
              Object {
                "marginBottom": 20,
                "paddingLeft": 10,
                "paddingRight": 10,
              }
            }
          >
            <View>
              <Text
                style={
                  Object {
                    "lineHeight": 52,
                  }
                }
              >
                <Text
                  style={
                    Object {
                      "color": "#000000",
                      "fontFamily": "TimesDigitalW04",
                      "fontSize": 36,
                      "fontWeight": "bold",
                      "lineHeight": 52,
                    }
                  }
                >
                  When she does come to social events, she dominates.
                </Text>
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "height": 0,
          }
        }
      />
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        >
          <ActivityIndicator />
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`6. an article with heading tags 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#f0f0f0",
    }
  }
>
  <RCTScrollView>
    <View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        />
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        >
          <View
            style={
              Object {
                "marginBottom": 0,
                "paddingLeft": 10,
                "paddingRight": 10,
              }
            }
          >
            <View>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesModern-Bold",
                    "fontSize": 25,
                    "lineHeight": 26,
                    "marginBottom": 10,
                  }
                }
              >
                This is heading 2
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        >
          <View
            style={
              Object {
                "marginBottom": 0,
                "paddingLeft": 10,
                "paddingRight": 10,
              }
            }
          >
            <View>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesModern-Bold",
                    "fontSize": 22,
                    "lineHeight": 26,
                    "marginBottom": 10,
                  }
                }
              >
                This is heading 3
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "height": 0,
          }
        }
      />
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        >
          <ActivityIndicator />
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`7. an article with link 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#f0f0f0",
    }
  }
>
  <RCTScrollView>
    <View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        />
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        >
          <View
            style={
              Object {
                "marginBottom": 20,
                "paddingLeft": 10,
                "paddingRight": 10,
              }
            }
          >
            <View>
              <Text
                style={
                  Object {
                    "lineHeight": 52,
                  }
                }
              >
                <Text
                  style={
                    Object {
                      "color": "#006699",
                      "fontFamily": "TimesDigitalW04",
                      "fontSize": 36,
                      "lineHeight": 52,
                      "marginBottom": 25,
                      "marginTop": 0,
                      "textDecorationLine": "underline",
                    }
                  }
                >
                  Jack Dorsey
                </Text>
                <Text
                  style={
                    Object {
                      "color": "#000000",
                      "fontFamily": "TimesDigitalW04",
                      "fontSize": 36,
                      "lineHeight": 52,
                    }
                  }
                >
                   said today that while the company was unlikely to open its offices before September, almost all staff could now work permanently from wherever they want.
                </Text>
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#ffffff",
                "maxWidth": "100%",
                "overflow": "hidden",
                "width": undefined,
              }
            }
          >
            <ArticleExtras />
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        >
          <ActivityIndicator />
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`8. an article with italic link 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#f0f0f0",
    }
  }
>
  <RCTScrollView>
    <View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        />
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        >
          <View
            style={
              Object {
                "marginBottom": 20,
                "paddingLeft": 10,
                "paddingRight": 10,
              }
            }
          >
            <View>
              <Text
                style={
                  Object {
                    "lineHeight": 52,
                  }
                }
              >
                <Text
                  style={
                    Object {
                      "color": "#000000",
                      "fontFamily": "TimesDigitalW04",
                      "fontSize": 36,
                      "lineHeight": 52,
                    }
                  }
                >
                  In his 2015 book on the tournaments, 
                </Text>
                <Text
                  style={
                    Object {
                      "color": "#006699",
                      "fontFamily": "TimesDigitalW04",
                      "fontSize": 36,
                      "fontStyle": "italic",
                      "lineHeight": 52,
                      "marginBottom": 25,
                      "marginTop": 0,
                      "textDecorationLine": "underline",
                    }
                  }
                >
                  Superforecasting
                </Text>
                <Text
                  style={
                    Object {
                      "color": "#000000",
                      "fontFamily": "TimesDigitalW04",
                      "fontSize": 36,
                      "lineHeight": 52,
                    }
                  }
                >
                  , Professor Tetlock said the most accurate predictors all used very similar methods. They used a historical “base rate” for predicting how likely an event was, adjusting constantly in the light of new information.
                </Text>
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#ffffff",
                "maxWidth": "100%",
                "overflow": "hidden",
                "width": undefined,
              }
            }
          >
            <ArticleExtras />
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        >
          <ActivityIndicator />
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`9. an article with bold text followed by bold link 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#f0f0f0",
    }
  }
>
  <RCTScrollView>
    <View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        />
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        >
          <View
            style={
              Object {
                "marginBottom": 20,
                "paddingLeft": 10,
                "paddingRight": 10,
              }
            }
          >
            <View>
              <Text
                style={
                  Object {
                    "lineHeight": 52,
                  }
                }
              >
                <Text
                  style={
                    Object {
                      "color": "#000000",
                      "fontFamily": "TimesDigitalW04",
                      "fontSize": 36,
                      "fontWeight": "bold",
                      "lineHeight": 52,
                    }
                  }
                >
                  2 
                </Text>
                <Text
                  style={
                    Object {
                      "color": "#006699",
                      "fontFamily": "TimesDigitalW04",
                      "fontSize": 36,
                      "fontWeight": "bold",
                      "lineHeight": 52,
                      "marginBottom": 25,
                      "marginTop": 0,
                      "textDecorationLine": "underline",
                    }
                  }
                >
                  Becoming by Michelle Obama
                </Text>
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#ffffff",
                "maxWidth": "100%",
                "overflow": "hidden",
                "width": undefined,
              }
            }
          >
            <ArticleExtras />
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        >
          <ActivityIndicator />
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`10. an article with italic and normal text link 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#f0f0f0",
    }
  }
>
  <RCTScrollView>
    <View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        />
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        >
          <View
            style={
              Object {
                "marginBottom": 20,
                "paddingLeft": 10,
                "paddingRight": 10,
              }
            }
          >
            <View>
              <Text
                style={
                  Object {
                    "lineHeight": 52,
                  }
                }
              >
                <Text
                  style={
                    Object {
                      "color": "#000000",
                      "fontFamily": "TimesDigitalW04",
                      "fontSize": 36,
                      "lineHeight": 52,
                    }
                  }
                >
                  Family Action is one of two charities being supported by 
                </Text>
                <Text
                  style={
                    Object {
                      "color": "#006699",
                      "fontFamily": "TimesDigitalW04",
                      "fontSize": 36,
                      "fontStyle": "italic",
                      "lineHeight": 52,
                      "marginBottom": 25,
                      "marginTop": 0,
                      "textDecorationLine": "underline",
                    }
                  }
                >
                  The Times
                </Text>
                <Text
                  style={
                    Object {
                      "color": "#006699",
                      "fontFamily": "TimesDigitalW04",
                      "fontSize": 36,
                      "lineHeight": 52,
                      "marginBottom": 25,
                      "marginTop": 0,
                      "textDecorationLine": "underline",
                    }
                  }
                >
                   Coronavirus Charity Appeal
                </Text>
                <Text
                  style={
                    Object {
                      "color": "#000000",
                      "fontFamily": "TimesDigitalW04",
                      "fontSize": 36,
                      "lineHeight": 52,
                    }
                  }
                >
                   to support people in greatest hardship under the restrictions. The second charity is The Big Issue Foundation.
                </Text>
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#ffffff",
                "maxWidth": "100%",
                "overflow": "hidden",
                "width": undefined,
              }
            }
          >
            <ArticleExtras />
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        >
          <ActivityIndicator />
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`11. an article with bold and italic text at the same time 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#f0f0f0",
    }
  }
>
  <RCTScrollView>
    <View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        />
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        >
          <View
            style={
              Object {
                "marginBottom": 20,
                "paddingLeft": 10,
                "paddingRight": 10,
              }
            }
          >
            <View>
              <Text
                style={
                  Object {
                    "lineHeight": 52,
                  }
                }
              >
                <Text
                  style={
                    Object {
                      "color": "#000000",
                      "fontFamily": "TimesDigitalW04",
                      "fontSize": 36,
                      "fontStyle": "italic",
                      "fontWeight": "bold",
                      "lineHeight": 52,
                    }
                  }
                >
                  Conversations with Friends
                </Text>
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#ffffff",
                "maxWidth": "100%",
                "overflow": "hidden",
                "width": undefined,
              }
            }
          >
            <ArticleExtras />
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        >
          <ActivityIndicator />
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`12. an article starting with single quote 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#f0f0f0",
    }
  }
>
  <RCTScrollView>
    <View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        />
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        >
          <Text
            style={
              Object {
                "color": undefined,
                "fontFamily": "TimesModern-Regular",
                "fontSize": 216,
                "left": 10,
                "lineHeight": 220.9306640625,
                "position": "absolute",
              }
            }
          >
            ‘S
          </Text>
          <View
            style={
              Object {
                "height": 208,
                "marginBottom": 20,
                "paddingLeft": 10,
                "paddingRight": 10,
              }
            }
          >
            <View>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "left": 182,
                    "lineHeight": 52,
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                o
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "left": 202.53125,
                    "lineHeight": 52,
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                rting
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "left": 285.060546875,
                    "lineHeight": 52,
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                eyebrows?!
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "left": 473.12890625,
                    "lineHeight": 52,
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                Really?
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "left": 594.365234375,
                    "lineHeight": 52,
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                During
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "left": 707.708984375,
                    "lineHeight": 52,
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                a
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "left": 182,
                    "lineHeight": 52,
                    "position": "absolute",
                    "top": 52,
                  }
                }
              >
                pandemic?!”
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "left": 388.173828125,
                    "lineHeight": 52,
                    "position": "absolute",
                    "top": 52,
                  }
                }
              >
                This
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "left": 465.693359375,
                    "lineHeight": 52,
                    "position": "absolute",
                    "top": 52,
                  }
                }
              >
                tweet
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "left": 563.322265625,
                    "lineHeight": 52,
                    "position": "absolute",
                    "top": 52,
                  }
                }
              >
                landed
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "left": 680.09375,
                    "lineHeight": 52,
                    "position": "absolute",
                    "top": 52,
                  }
                }
              >
                in
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "left": 182,
                    "lineHeight": 52,
                    "position": "absolute",
                    "top": 104,
                  }
                }
              >
                my
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "left": 239.498046875,
                    "lineHeight": 52,
                    "position": "absolute",
                    "top": 104,
                  }
                }
              >
                Twitter
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "left": 359.451171875,
                    "lineHeight": 52,
                    "position": "absolute",
                    "top": 104,
                  }
                }
              >
                feed
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "left": 438.88671875,
                    "lineHeight": 52,
                    "position": "absolute",
                    "top": 104,
                  }
                }
              >
                after
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "left": 522.892578125,
                    "lineHeight": 52,
                    "position": "absolute",
                    "top": 104,
                  }
                }
              >
                talking
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "left": 638.92578125,
                    "lineHeight": 52,
                    "position": "absolute",
                    "top": 104,
                  }
                }
              >
                to
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "left": 182,
                    "lineHeight": 52,
                    "position": "absolute",
                    "top": 156,
                  }
                }
              >
                Jenni
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "left": 278.310546875,
                    "lineHeight": 52,
                    "position": "absolute",
                    "top": 156,
                  }
                }
              >
                Murray
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "left": 398.509765625,
                    "lineHeight": 52,
                    "position": "absolute",
                    "top": 156,
                  }
                }
              >
                on
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "left": 447.81640625,
                    "lineHeight": 52,
                    "position": "absolute",
                    "top": 156,
                  }
                }
              >
                BBC
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "left": 524.984375,
                    "lineHeight": 52,
                    "position": "absolute",
                    "top": 156,
                  }
                }
              >
                Radio
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "left": 625.21484375,
                    "lineHeight": 52,
                    "position": "absolute",
                    "top": 156,
                  }
                }
              >
                4
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#ffffff",
                "maxWidth": "100%",
                "overflow": "hidden",
                "width": undefined,
              }
            }
          >
            <ArticleExtras />
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        >
          <ActivityIndicator />
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`13. an article starting with double quote 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#f0f0f0",
    }
  }
>
  <RCTScrollView>
    <View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        />
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        >
          <Text
            style={
              Object {
                "color": undefined,
                "fontFamily": "TimesModern-Regular",
                "fontSize": 216,
                "left": 10,
                "lineHeight": 220.9306640625,
                "position": "absolute",
              }
            }
          >
            “S
          </Text>
          <View
            style={
              Object {
                "height": 260,
                "marginBottom": 20,
                "paddingLeft": 10,
                "paddingRight": 10,
              }
            }
          >
            <View>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "left": 215,
                    "lineHeight": 52,
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                o
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "left": 235.53125,
                    "lineHeight": 52,
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                rting
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "left": 318.060546875,
                    "lineHeight": 52,
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                eyebrows?!
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "left": 506.12890625,
                    "lineHeight": 52,
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                Really?
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "left": 215,
                    "lineHeight": 52,
                    "position": "absolute",
                    "top": 52,
                  }
                }
              >
                During
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "left": 328.34375,
                    "lineHeight": 52,
                    "position": "absolute",
                    "top": 52,
                  }
                }
              >
                a
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "left": 356.837890625,
                    "lineHeight": 52,
                    "position": "absolute",
                    "top": 52,
                  }
                }
              >
                pandemic?!”
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "left": 563.01171875,
                    "lineHeight": 52,
                    "position": "absolute",
                    "top": 52,
                  }
                }
              >
                This
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "left": 640.53125,
                    "lineHeight": 52,
                    "position": "absolute",
                    "top": 52,
                  }
                }
              >
                tweet
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "left": 215,
                    "lineHeight": 52,
                    "position": "absolute",
                    "top": 104,
                  }
                }
              >
                landed
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "left": 331.771484375,
                    "lineHeight": 52,
                    "position": "absolute",
                    "top": 104,
                  }
                }
              >
                in
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "left": 369.283203125,
                    "lineHeight": 52,
                    "position": "absolute",
                    "top": 104,
                  }
                }
              >
                my
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "left": 426.78125,
                    "lineHeight": 52,
                    "position": "absolute",
                    "top": 104,
                  }
                }
              >
                Twitter
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "left": 546.734375,
                    "lineHeight": 52,
                    "position": "absolute",
                    "top": 104,
                  }
                }
              >
                feed
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "left": 626.169921875,
                    "lineHeight": 52,
                    "position": "absolute",
                    "top": 104,
                  }
                }
              >
                after
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "left": 215,
                    "lineHeight": 52,
                    "position": "absolute",
                    "top": 156,
                  }
                }
              >
                talking
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "left": 331.033203125,
                    "lineHeight": 52,
                    "position": "absolute",
                    "top": 156,
                  }
                }
              >
                to
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "left": 371.884765625,
                    "lineHeight": 52,
                    "position": "absolute",
                    "top": 156,
                  }
                }
              >
                Jenni
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "left": 468.1953125,
                    "lineHeight": 52,
                    "position": "absolute",
                    "top": 156,
                  }
                }
              >
                Murray
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "left": 588.39453125,
                    "lineHeight": 52,
                    "position": "absolute",
                    "top": 156,
                  }
                }
              >
                on
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "left": 637.701171875,
                    "lineHeight": 52,
                    "position": "absolute",
                    "top": 156,
                  }
                }
              >
                BBC
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "left": 0,
                    "lineHeight": 52,
                    "position": "absolute",
                    "top": 208,
                  }
                }
              >
                Radio
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 36,
                    "left": 100.23046875,
                    "lineHeight": 52,
                    "position": "absolute",
                    "top": 208,
                  }
                }
              >
                4
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#ffffff",
                "maxWidth": "100%",
                "overflow": "hidden",
                "width": undefined,
              }
            }
          >
            <ArticleExtras />
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        >
          <ActivityIndicator />
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`14. an article skeleton with responsive items 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#f0f0f0",
    }
  }
>
  <RCTScrollView>
    <View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        />
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        >
          <View
            style={
              Object {
                "alignSelf": "center",
                "marginBottom": 20,
                "paddingLeft": 10,
                "paddingRight": 10,
                "width": 660,
              }
            }
          >
            <View>
              <Text
                style={
                  Object {
                    "lineHeight": 52,
                  }
                }
              >
                <Text
                  style={
                    Object {
                      "color": "#000000",
                      "fontFamily": "TimesDigitalW04",
                      "fontSize": 36,
                      "lineHeight": 52,
                    }
                  }
                >
                  This being Black History Month, last week
                </Text>
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        >
          <View
            style={
              Object {
                "marginBottom": 20,
                "paddingHorizontal": 10,
              }
            }
          >
            <InteractiveWrapper />
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "height": 0,
          }
        }
      />
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        >
          <ActivityIndicator />
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;
